Use Java 11 collection utilities