@@ -15,7 +15,7 @@ package io.github.pyvesb.eclipse_solargraph.utils;
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
-import java.util.Arrays;
+import java.util.List;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutionException;
 import java.util.stream.Collectors;
@@ -39,7 +39,7 @@ public class CommandJob extends Job {
 
 	@Override
 	protected IStatus run(IProgressMonitor monitor) {
-		String commandString = Arrays.asList(command).toString();
+		String commandString = List.of(command).toString();
 		LogHelper.info("Running command " + commandString);
 		monitor.beginTask(description, IProgressMonitor.UNKNOWN);
 		try {
